@@ -33,7 +33,7 @@ urlpatterns = [
     path('courses/<int:cid>/quizzes/',courseView.quiz_list_view, name='quiz_list'),
     path('courses/<int:cid>/quizzes/<int:id>/', courseView.quiz_view, name='quiz_page'),
     path('courses/<int:cid>/quizzes/<int:id>/start', courseView.pre_quiz_view, name='quiz_start'),
-    path('courses/Homework/files/<int:id>/', views.download, name='download'),
+    path('courses/Assignments/files/<int:id>/', views.download, name='download'),
     path('courses/<int:id>/Homework/', courseView.homework_view, name='homework_list'),
     path('courses/<int:cid>/Homework/<int:id>/', courseView.homework_submit_view, name='submit_assign'),
     path('courses/<int:cid>/grades/', courseView.grade_view, name='assignment_list'),
